--- a/index.html
+++ b/index.html
@@ -1194,16 +1194,14 @@ function renderExercises(){
     </div>
   `).join('');
 
-  // 카드 클릭 이벤트 연결
-  currentExercises.forEach(name => {
-    const card = document.getElementById(`card-${name}`);
-    card.onclick = () => openExerciseDetail(name);
-    // 휴지통 클릭 이벤트
-    const delBtn = card.querySelector('.delete-btn');
-    delBtn.onclick = (e) => {
-      e.stopPropagation(); // 카드 클릭 이벤트 방지
-      deleteExercise(name);
-    };
+ // 삭제 버튼 클릭 이벤트 연결
+  const deleteBtns = exerciseListEl.querySelectorAll('.delete-btn');
+  deleteBtns.forEach((btn, index) => {
+    btn.addEventListener('click', () => {
+      const removedExercise = currentExercises.splice(index, 1)[0]; // 배열에서 제거
+      renderExercises(); // 다시 렌더링
+      console.log(`${removedExercise} 삭제됨`);
+    });
   });
 }
 
