--- a/index.html
+++ b/index.html
@@ -1173,10 +1173,17 @@ function renderExercises(){
     cardEl.className = 'exercise-card';
     cardEl.id = `card-${name}`;
     cardEl.innerHTML = `
-      <div class="exercise-name">${name}</div>
-      <div class="exercise-sub">${getAccessorySummary(name)}</div>
-      <button class="delete-btn">삭제</button>
-    `;
+  <div class="exercise-name">${name}</div>
+  <div class="exercise-sub">${getAccessorySummary(name)}</div>
+  <button class="delete-btn">
+    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" 
+         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <line x1="18" y1="6" x2="6" y2="18"></line>
+      <line x1="6" y1="6" x2="18" y2="18"></line>
+    </svg>
+  </button>
+`;
+
 
     exerciseListEl.appendChild(cardEl);
 
