--- a/index.html
+++ b/index.html
@@ -1091,7 +1091,7 @@ goBtn.addEventListener('click', ()=> {
         html += `<div style="
                         text-align:center;
                         color:white;
-                        margin:12px 0;   /* 기존 6px → 12px로 간격 늘림 */
+                        margin:12px 0; 
                         font-size:16px;
                         font-weight:600;
                    ">
@@ -1197,7 +1197,7 @@ function renderExercises(){
   renderExercises(); // 🔁 다시 그리기
 });
 
-}
+
 
 
 
