--- a/index.html
+++ b/index.html
@@ -2204,6 +2204,15 @@ tabBtns.forEach(btn => {
   });
 });
 
+// Firestore 규칙 예시
+rules_version = '2';
+service cloud.firestore {
+  match /databases/{database}/documents {
+    match /accessoryExercises/{part}/exercises/{exercise} {
+      allow read, write: if request.auth != null;  // 로그인한 사용자만 읽기/쓰기 가능
+    }
+  }
+}
 
    
 
