--- a/index.html
+++ b/index.html
@@ -1168,39 +1168,33 @@ function renderExercises(){
     return;
   }
 
-  // 기존 클릭 이벤트 모두 제거
-  exerciseListEl.innerHTML = currentExercises.map(name => `
-    <div class="exercise-card" id="card-${name}">
+  exerciseListEl.innerHTML = ''; // 기존 초기화
+
+  currentExercises.forEach(name => {
+    const card = document.createElement('div');
+    card.className = 'exercise-card';
+    card.id = `card-${name}`;
+
+    card.innerHTML = `
       <div class="exercise-name">${name}</div>
       <div class="exercise-sub">${getAccessorySummary(name)}</div>
       <button class="delete-btn" aria-label="삭제">
-  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-    <!-- 뚜껑 -->
-    <line x1="3" y1="4" x2="21" y2="4"></line>
-    <line x1="8" y1="4" x2="8" y2="2"></line>
-    <line x1="16" y1="4" x2="16" y2="2"></line>
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <line x1="3" y1="4" x2="21" y2="4"></line>
+          <line x1="8" y1="4" x2="8" y2="2"></line>
+          <line x1="16" y1="4" x2="16" y2="2"></line>
+          <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+          <line x1="8" y1="8" x2="8" y2="20"></line>
+          <line x1="12" y1="8" x2="12" y2="20"></line>
+          <line x1="16" y1="8" x2="16" y2="20"></line>
+        </svg>
+      </button>
+    `;
 
-    <!-- 휴지통 몸통 -->
-    <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
-
-    <!-- 안쪽 세로선 -->
-    <line x1="8" y1="8" x2="8" y2="20"></line>
-    <line x1="12" y1="8" x2="12" y2="20"></line>
-    <line x1="16" y1="8" x2="16" y2="20"></line>
-  </svg>
-</button>
-
-
-    </div>
-  `).join('');
-
-  // 카드 클릭 이벤트 연결
-  currentExercises.forEach(name => {
-    const card = document.getElementById(`card-${name}`);
-    card.onclick = () => openExerciseDetail(name);
-    // 휴지통 클릭 이벤트
     const delBtn = card.querySelector('.delete-btn');
-    delBtn.onclick = (e) =>    deleteExercise(e, name);
+    delBtn.onclick = () => deleteExerciseFromDB(name); // ← 여기서 name을 직접 전달
+
+    exerciseListEl.appendChild(card);
   });
 }
 
@@ -2161,20 +2155,19 @@ function deleteExercise(e){
     deleteExerciseFromDB(currentPart, name);
 }
 
-async function deleteExerciseFromDB(part, name){
+async function deleteExerciseFromDB(part, exerciseName){
     try {
         await db.collection('users')
-        .doc(auth.currentUser.uid)
-        .collection('accessoryExercises')
-        .doc(exerciseName)
-        .set({
-            name: exerciseName,
-            createdAt: firebase.firestore.FieldValue.serverTimestamp()
-        });
+          .doc(auth.currentUser.uid)
+          .collection('accessoryExercises')
+          .doc(exerciseName)
+          .delete();   // ← delete()로 실제 삭제
+        console.log('삭제 완료:', exerciseName);
     } catch(err){
         console.error('삭제 실패:', err);
     }
 }
+
 
    
 tabBtns.forEach(btn => {
