--- a/index.html
+++ b/index.html
@@ -1140,21 +1140,16 @@ const partButtons = document.querySelectorAll('.part-btn');
 const currentPartNameEl = document.getElementById('current-part-name');
 
 partButtons.forEach(btn => {
-  btn.addEventListener('click', async () => {
-    try {
-      currentPart = btn.dataset.part;   
-      currentPartNameEl.textContent = currentPart;
-      partScreen.style.display = 'none';
-      exerciseScreen.style.display = 'block';
+  btn.addEventListener('click', async ()=>{
+    currentPart = btn.dataset.part;   // 🔥 현재 선택한 종목 저장
+    currentPartNameEl.textContent = currentPart;
+    partScreen.style.display = 'none';
+    exerciseScreen.style.display = 'block';
 
-      // Firestore에서 해당 종목 불러오기
-      await loadExercises(currentPart);
-    } catch (e) {
-      console.error('loadExercises 에러:', e);
-    }
+    // Firestore에서 해당 종목 불러오기
+    await loadExercises(currentPart);
   });
 });
-
 
 function getAccessorySummary(name){
   const list = accRecordsByExercise[name];
@@ -1173,33 +1168,42 @@ function renderExercises(){
     return;
   }
 
-  exerciseListEl.innerHTML = ''; // 기존 초기화
-
-  currentExercises.forEach(name => {
-    const card = document.createElement('div');
-    card.className = 'exercise-card';
-    card.id = `card-${name}`;
-
-    card.innerHTML = `
+  // 기존 클릭 이벤트 모두 제거
+  exerciseListEl.innerHTML = currentExercises.map(name => `
+    <div class="exercise-card" id="card-${name}">
       <div class="exercise-name">${name}</div>
       <div class="exercise-sub">${getAccessorySummary(name)}</div>
       <button class="delete-btn" aria-label="삭제">
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-          <line x1="3" y1="4" x2="21" y2="4"></line>
-          <line x1="8" y1="4" x2="8" y2="2"></line>
-          <line x1="16" y1="4" x2="16" y2="2"></line>
-          <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
-          <line x1="8" y1="8" x2="8" y2="20"></line>
-          <line x1="12" y1="8" x2="12" y2="20"></line>
-          <line x1="16" y1="8" x2="16" y2="20"></line>
-        </svg>
-      </button>
-    `;
+  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+    <!-- 뚜껑 -->
+    <line x1="3" y1="4" x2="21" y2="4"></line>
+    <line x1="8" y1="4" x2="8" y2="2"></line>
+    <line x1="16" y1="4" x2="16" y2="2"></line>
 
+    <!-- 휴지통 몸통 -->
+    <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+
+    <!-- 안쪽 세로선 -->
+    <line x1="8" y1="8" x2="8" y2="20"></line>
+    <line x1="12" y1="8" x2="12" y2="20"></line>
+    <line x1="16" y1="8" x2="16" y2="20"></line>
+  </svg>
+</button>
+
+
+    </div>
+  `).join('');
+
+  // 카드 클릭 이벤트 연결
+  currentExercises.forEach(name => {
+    const card = document.getElementById(`card-${name}`);
+    card.onclick = () => openExerciseDetail(name);
+    // 휴지통 클릭 이벤트
     const delBtn = card.querySelector('.delete-btn');
-    delBtn.onclick = () => deleteExerciseFromDB(name); // ← 여기서 name을 직접 전달
-
-    exerciseListEl.appendChild(card);
+    delBtn.onclick = (e) => {
+      e.stopPropagation(); // 카드 클릭 이벤트 방지
+      deleteExercise(name);
+    };
   });
 }
 
@@ -1218,27 +1222,32 @@ function closeExerciseDetail(){
 
 
 
-async function loadExercises(part) {
-  try {
-    // Firestore에서 part별 exercises 컬렉션 읽기
-    const snapshot = await db
-      .collection("accessoryExercises")
-      .doc(part)               // ex: "shoulder"
-      .collection("exercises") // 컬렉션 이름은 문자열
-      .get();                  // 읽기용
 
-    currentExercises = [];
-    snapshot.forEach(doc => {
-      currentExercises.push(doc.data().name); // doc.data().name으로 종목 이름 가져오기
-    });
+async function loadExercises(part){
+  currentPart = part;
 
-    renderExercises();  // UI 갱신
-  } catch (e) {
-    console.error('Firestore load 실패:', e);
+  // 🔥 로컬에 캐시가 있으면 즉시 렌더
+  if(accRecordsByExercise[part]){
+    currentExercises = accRecordsByExercise[part];
+    renderExercises(); // 즉시 화면 렌더링
+  } else {
+    // 처음 불러오는 경우
     currentExercises = [];
-    renderExercises();
+    renderExercises(); // 빈 상태 렌더 (선택 사항)
+  }
+
+  // Firestore fetch
+  const user = auth.currentUser;
+  if(user){
+    const ref = db.collection('users').doc(user.uid)
+                  .collection('accessories').doc(part);
+    const snap = await ref.get();
+    accRecordsByExercise[part] = snap.exists ? snap.data().list || [] : [];
+    currentExercises = accRecordsByExercise[part];
+    renderExercises(); // fetch 완료 후 화면 다시 렌더
   }
 }
+
 
 
 
@@ -2130,83 +2139,23 @@ function renderAccessoryRecords(){
 
 
 
-function deleteExercise(e, name){
-    e.stopPropagation(); // 이제 에러 안남
-    currentExercises = currentExercises.filter(n => n !== name);
-    delete accRecordsByExercise[name];
-    renderExercises();
-}
+function deleteExercise(name, e){
+  e.stopPropagation(); // 🔥 카드 클릭 이벤트 전파 차단
+  if(!confirm(`${name} 종목을 삭제하시겠습니까?`)) return;
 
-function deleteExercise(e){
-    e.stopPropagation();
-    const card = e.currentTarget.closest('.exercise-card');
-    const name = card.querySelector('.exercise-name').textContent;
+  // 로컬 제거
+  accRecordsByExercise[currentPart] = accRecordsByExercise[currentPart].filter(n => n !== name);
+  currentExercises = accRecordsByExercise[currentPart];
+  renderExercises();
 
-    // 1️⃣ 배열에서 제거
-    currentExercises = currentExercises.filter(n => n !== name);
-
-    // 2️⃣ 메모리 기록 제거
-    delete accRecordsByExercise[name];
-
-    // 3️⃣ 화면 재렌더링
-    renderExercises();
-
-    // 4️⃣ DB에서도 삭제
-    deleteExerciseFromDB(currentPart, name);
-}
-
-async function deleteExerciseFromDB(exerciseName) {
-    try {
-        await db.collection('users')
-          .doc(auth.currentUser.uid)
-          .collection('accessoryExercises')
-          .doc(exerciseName)
-          .delete();
-
-        // ✅ 화면 반영
-        // 배열에서 제거
-        currentExercises = currentExercises.filter(name => name !== exerciseName);
-        // 재렌더링
-        renderExercises();
-
-        console.log('삭제 완료:', exerciseName);
-    } catch(err) {
-        console.error('삭제 실패:', err);
-    }
-}
-
-// 카드 삭제 버튼 연결
-// 카드 삭제
-exerciseListEl.addEventListener('click', async (e) => {
-  if (!e.target.closest('.delete-btn')) return;
-
-  const card = e.target.closest('.exercise-card');
-  const name = card.id.replace('card-', '');
-
-  try {
-    // 1️⃣ Firestore에서 삭제
-    await db.collection('accessoryExercises')
-            .doc(name)
-            .delete();
-
-    // 2️⃣ currentExercises 배열에서 제거
-    currentExercises = currentExercises.filter(n => n !== name);
-
-    // 3️⃣ UI 갱신
-    renderExercises();
-
-    // 4️⃣ optional: 삭제 메시지
-    fadeTempMsg(recordMessage, `${name} 삭제 완료!`);
-  } catch(err) {
-    console.error(err);
-    fadeTempMsg(recordMessage, `삭제 실패: ${err.message}`);
+  // Firestore 제거
+  const user = auth.currentUser;
+  if(user){
+    const ref = db.collection('users').doc(user.uid)
+                  .collection('accessories').doc(currentPart);
+    ref.set({ list: accRecordsByExercise[currentPart] }, { merge: true });
   }
-});
-
-
-
-
-   
+}
 tabBtns.forEach(btn => {
   btn.addEventListener('click', ()=>{
     calPopup.classList.add("hidden");
@@ -2238,6 +2187,8 @@ tabBtns.forEach(btn => {
 
 
    
+
+
    
 
 
